force-app/main/default/objects/NI_Customer_Agreement__c/NI_Customer_Agreement__c.object-meta.xml
<CustomObject>
    <description>Salesforce.com Change Request: NICC-015836

Used by Finance as part of CAPS Royalty and Amortization management</description>
    <label>Customer Agreement</label>
    <nameField>
        <displayFormat>CAGR-{0000}</displayFormat>
        <label>Customer Agreement Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>