force-app/main/default/objects/NI_Customer_Agreement__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Agreements (Account)</relationshipLabel>
    <relationshipName>Customer_Agreements1</relationshipName>
    <type>Lookup</type>
</CustomField>