force-app/main/default/objects/NI_Customer_Agreement__c/fields/Account_Brand__c.field-meta.xml
<CustomField>
    <fullName>Account_Brand__c</fullName>
    <formula>TEXT(Account__r.Brand__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Brand</label>
    <type>Text</type>
</CustomField>