force-app/main/default/objects/NI_Customer_Agreement__c/fields/Account_Franchisor__c.field-meta.xml
<CustomField>
    <fullName>Account_Franchisor__c</fullName>
    <formula>TEXT(Account__r.Franchisor__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Franchisor</label>
    <type>Text</type>
</CustomField>