force-app/main/default/objects/NI_Customer_Agreement__c/fields/Amortization_Payment__c.field-meta.xml
<CustomField>
    <fullName>Amortization_Payment__c</fullName>
    <formula>/*(Royalty_Base_Amount__c + ((Sale_Price__c - Royalty_Base_Amount__c) * Royalty_Percentage__c)) / Amortization_Term__c
*/

IF(Royalty_Base_Amount__c + ((Sale_Price__c - Royalty_Base_Amount__c) * Royalty_Percentage__c) &lt; Minimum_Royalty__c, Minimum_Royalty__c/Amortization_Term__c, (Royalty_Base_Amount__c + ((Sale_Price__c - Royalty_Base_Amount__c) * Royalty_Percentage__c))/Amortization_Term__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amortization Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>