force-app/main/default/objects/NI_Customer_Agreement__c/fields/Amortization_Term__c.field-meta.xml
<CustomField>
    <fullName>Amortization_Term__c</fullName>
    <description>Number of months the Product is being amortized across.</description>
    <inlineHelpText>Number of months the Product is being amortized across.</inlineHelpText>
    <label>Amortization Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>