force-app/main/default/objects/NI_Customer_Agreement__c/fields/Amount_Amortized__c.field-meta.xml
<CustomField>
    <fullName>Amount_Amortized__c</fullName>
    <label>Amount Amortized</label>
    <summarizedField>NI_Distribution__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>NI_Distribution__c.Status__c</field>
        <operation>equals</operation>
        <value>Closed</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>NI_Distribution__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Amortization</value>
    </summaryFilterItems>
    <summaryForeignKey>NI_Distribution__c.Customer_Agreement__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>