force-app/main/default/objects/NI_Customer_Agreement__c/fields/Amount_Received__c.field-meta.xml
<CustomField>
    <fullName>Amount_Received__c</fullName>
    <description>Used to Inactivate Service Rules and to update Subscription Rules after Year 1 is collected.
Roll Up Summary of all related &quot;&quot;Paid&quot;&quot; Invoice records OR Update this field each time a Paid Invoice is linked to it.</description>
    <inlineHelpText>Used to Inactivate Service Rules and to update Subscription Rules after Year 1 is collected.
Roll Up Summary of all related &quot;&quot;Paid&quot;&quot; Invoice records OR Update this field each time a Paid Invoice is linked to it.</inlineHelpText>
    <label>Amount Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>