force-app/main/default/objects/NI_Customer_Agreement__c/fields/Deployment_Instance__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Instance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>&quot;Lookup.  Inserted OnCreate from Opportunity (find DI using AccountId and ProductId)
Update if Account or Product changes&quot;</description>
    <inlineHelpText>&quot;Lookup.  Inserted OnCreate from Opportunity (find DI using AccountId and ProductId)
Update if Account or Product changes&quot;</inlineHelpText>
    <label>Deployment Instance</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Customer Agreements</relationshipLabel>
    <relationshipName>Customer_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>