force-app/main/default/objects/NI_Customer_Agreement__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <description>Used to calculate Starcite Royalty
(PricebookEntry.UnitPrice - OpportunityLineItem.TotalPrice) / PricebookEntry.UnitPrice&quot;</description>
    <inlineHelpText>Used to calculate Starcite Royalty.
(PricebookEntry.UnitPrice - OpportunityLineItem.TotalPrice) / PricebookEntry.UnitPrice</inlineHelpText>
    <label>Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>