force-app/main/default/objects/NI_Customer_Agreement__c/fields/General_Ledger_Credit_Account__c.field-meta.xml
<CustomField>
    <fullName>General_Ledger_Credit_Account__c</fullName>
    <formula>Vendor_Agreement__r.General_Ledger_Credit_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>General Ledger Credit Account</label>
    <type>Text</type>
</CustomField>