force-app/main/default/objects/NI_Customer_Agreement__c/fields/Install_Date__c.field-meta.xml
<CustomField>
    <fullName>Install_Date__c</fullName>
    <description>Install Date is used as the Amortization Start Date.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Install Date is used as the Amortization Start Date.</inlineHelpText>
    <label>Install Date</label>
    <type>Date</type>
</CustomField>