force-app/main/default/objects/NI_Customer_Agreement__c/fields/Manual_Override__c.field-meta.xml
<CustomField>
    <fullName>Manual_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do not trigger auto-creation of Distribution or Amortization records</description>
    <inlineHelpText>Do not trigger auto-creation of Distribution or Amortization records</inlineHelpText>
    <label>Manual Override</label>
    <type>Checkbox</type>
</CustomField>