force-app/main/default/objects/NI_Customer_Agreement__c/fields/Minimum_Royalty__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Royalty__c</fullName>
    <label>Minimum Royalty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>