force-app/main/default/objects/NI_Customer_Agreement__c/fields/Number_of_Distributions__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Distributions__c</fullName>
    <description>DO NOT DELETE!  
This field is used by the &quot;Number of Distributions&quot; Validation Rule</description>
    <inlineHelpText>Count of Distribution Records related to this Customer Agreement Record</inlineHelpText>
    <label>Number of Distributions</label>
    <summaryForeignKey>NI_Distribution__c.Customer_Agreement__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>