force-app/main/default/objects/NI_Customer_Agreement__c/fields/Royalty_Base_Amount__c.field-meta.xml
<CustomField>
    <fullName>Royalty_Base_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Royalty Base Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>