force-app/main/default/objects/NI_Customer_Agreement__c/fields/Royalty_Distribution_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Royalty_Distribution_Trigger__c</fullName>
    <description>&quot;Used to update &quot;&quot;Royalty Distribution Trigger&quot;&quot; on Subscriptions.
Installed; Receipt of Payment; Installed OR Receipt of Payment; Installed AND Receipt of Payment; Annual. After all invoice payments are received for the first year billing cycle (i.e. Amount_Received__c &gt;= Sale_Price__c), &quot;&quot;Install Date&quot;&quot; Subscription Agreements will automatically update to &quot;&quot;Install Date AND Receipt of Payment&quot;&quot;.  The first payment that meets this criteria should only trigger a royalty for the amount equal to  Amount_Received__c - Sale_Price__c.  Subsequent royalty calculations should then be based on the full payment received.  For example, we pay the first year royalty on Go Live.  The customer does not pay us until one year later when they pay the full two year amount owed.  We have already paid royalty on the initial sale price, so we only want to pay royalties for the amount received in excess of the original sale price.  The subsequent year they pay their third year&apos;s subscription, and we need</description>
    <label>Royalty Distribution Trigger</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Installed</fullName>
            </value>
            <value>
                <fullName>Receipt of Payment</fullName>
            </value>
            <value>
                <fullName>Installed OR Receipt of Payment</fullName>
            </value>
            <value>
                <fullName>Installed AND Receipt of Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>