force-app/main/default/objects/NI_Customer_Agreement__c/fields/Royalty_Payment__c.field-meta.xml
<CustomField>
    <fullName>Royalty_Payment__c</fullName>
    <formula>IF(Royalty_Base_Amount__c + ((Sale_Price__c  - Royalty_Base_Amount__c) * Royalty_Percentage__c) &lt;  Minimum_Royalty__c, Minimum_Royalty__c, Royalty_Base_Amount__c + ((Sale_Price__c  - Royalty_Base_Amount__c) * Royalty_Percentage__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Royalty Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>