force-app/main/default/objects/NI_Customer_Agreement__c/fields/Services_Only_Order__c.field-meta.xml
<CustomField>
    <fullName>Services_Only_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <description>&quot;Services Only&quot; orders may be subject to different royalty rules.  This checkbox flags these orders so that they can be easily audited for manual review.</description>
    <inlineHelpText>&quot;Services Only&quot; orders may be subject to different royalty rules.  This checkbox flags these orders so that they can be easily audited for manual review.</inlineHelpText>
    <label>Services Only Order</label>
    <type>Checkbox</type>
</CustomField>