force-app/main/default/objects/NI_Customer_Agreement__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Agreements</relationshipLabel>
    <relationshipName>Customer_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>