force-app/main/default/objects/NI_Customer_Agreement__c/fields/Vendor_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor Agreement</label>
    <referenceTo>NI_Vendor_Agreement__c</referenceTo>
    <relationshipLabel>Customer Agreements</relationshipLabel>
    <relationshipName>Customer_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>